--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width,user-scalable=no,minimum-scale=1,maximum-scale=1">
-    <meta name="description" content="template" />
-    <title>template</title>
+    <meta name="description" content="alvarosiles" />
+    <title>alvarosiles</title>
     <style>
       body {
         margin: 0;
